--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -76,6 +76,8 @@ typings/
 # Optional stylelint cache
 .stylelintcache
 
+*.ini
+
 # Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
@@ -150,7 +152,8 @@ temp/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
