--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,20 +4,30 @@
   "description": "This project contains source code and supporting files for a serverless application that you can deploy with the SAM CLI. It includes the following files and folders.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "esbuild": "^0.27.2",
+    "form-data": "^4.0.5",
     "formidable": "^3.5.4",
+    "graphql": "^16.12.0",
+    "graphql-request": "^7.4.0",
+    "jsonwebtoken": "^9.0.3",
+    "mailgun.js": "^12.6.1",
     "pdf-parse": "^2.4.5",
     "pg": "^8.17.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^6.1.1",
+    "@graphql-codegen/typescript-graphql-request": "^6.4.0",
     "@types/busboy": "^1.5.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.16.0"
   }
 }
