--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,8 +1,12 @@
 - "!include public_admins.yaml"
+- "!include public_chat_participants.yaml"
+- "!include public_chats.yaml"
 - "!include public_class_sections.yaml"
 - "!include public_emails.yaml"
 - "!include public_exams.yaml"
 - "!include public_marks.yaml"
+- "!include public_messages.yaml"
+- "!include public_parents.yaml"
 - "!include public_progress_cards.yaml"
 - "!include public_students.yaml"
 - "!include public_subjects.yaml"
