--- a/hasura/metadata/databases/default/tables/public_emails.yaml
+++ b/hasura/metadata/databases/default/tables/public_emails.yaml
@@ -5,6 +5,9 @@ object_relationships:
   - name: exam
     using:
       foreign_key_constraint_on: exam_id
+  - name: parent
+    using:
+      foreign_key_constraint_on: parent_id
   - name: student
     using:
       foreign_key_constraint_on: student_id
