--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,4 +1,5 @@
 - "!include public_admins.yaml"
+- "!include public_bulk_uploads.yaml"
 - "!include public_chat_participants.yaml"
 - "!include public_chats.yaml"
 - "!include public_class_sections.yaml"
