--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@temporalio/client": "^1.14.1",
+    "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
     "form-data": "^4.0.5",
     "formidable": "^3.5.4",
