--- a/hasura/metadata/databases/default/tables/public_chat_participants.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat_participants.yaml
@@ -5,3 +5,82 @@ object_relationships:
   - name: chat
     using:
       foreign_key_constraint_on: chat_id
+  - name: parent
+    using:
+      manual_configuration:
+        column_mapping:
+          user_id: id
+        insertion_order: null
+        remote_table:
+          name: parents
+          schema: public
+  - name: teacher
+    using:
+      manual_configuration:
+        column_mapping:
+          user_id: id
+        insertion_order: null
+        remote_table:
+          name: teachers
+          schema: public
+insert_permissions:
+  - role: teacher
+    permission:
+      check: {}
+      columns:
+        - chat_id
+        - user_id
+        - user_type
+    comment: ""
+  - role: parent
+    permission:
+      check: {}
+      columns:
+        - chat_id
+        - user_id
+        - user_type
+    comment: ""
+select_permissions:
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - chat_id
+        - user_id
+        - user_type
+        - joined_at
+      filter: {}
+    comment: ""
+  - role: parent
+    permission:
+      columns:
+        - id
+        - chat_id
+        - user_id
+        - user_type
+        - joined_at
+      filter:
+        chat:
+          chat_participants:
+            user_id:
+              _eq: X-Hasura-User-Id
+    comment: ""
+update_permissions:
+  - role: teacher
+    permission:
+      columns:
+        - user_id
+        - user_type
+      filter: {}
+      check: {}
+    comment: ""
+  - role: parent
+    permission:
+      columns:
+        - user_id
+        - user_type
+      filter:
+        user_id:
+          _eq: X-Hasura-User-Id
+      check: {}
+    comment: ""
