--- a/hasura/metadata/databases/default/tables/public_class_sections.yaml
+++ b/hasura/metadata/databases/default/tables/public_class_sections.yaml
@@ -9,3 +9,14 @@ array_relationships:
         table:
           name: students
           schema: public
+select_permissions:
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - class_name
+        - section_name
+        - display_name
+        - created_at
+      filter: {}
+    comment: ""
