--- a/hasura/metadata/databases/default/tables/public_students.yaml
+++ b/hasura/metadata/databases/default/tables/public_students.yaml
@@ -30,3 +30,28 @@ array_relationships:
         table:
           name: progress_cards
           schema: public
+select_permissions:
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - admission_no
+        - name
+        - class_section_id
+        - parent_id
+        - is_active
+        - created_at
+      filter: {}
+    comment: ""
+  - role: parent
+    permission:
+      columns:
+        - id
+        - admission_no
+        - name
+        - class_section_id
+        - parent_id
+        - is_active
+      filter:
+        parent_id:
+          _eq: X-Hasura-User-Id
