--- a/hasura/metadata/databases/default/tables/public_teachers.yaml
+++ b/hasura/metadata/databases/default/tables/public_teachers.yaml
@@ -30,3 +30,24 @@ array_relationships:
         table:
           name: subjects
           schema: public
+select_permissions:
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - name
+        - email
+        - phone
+        - qualification
+        - is_active
+        - created_at
+      filter: {}
+    comment: ""
+  - role: parent
+    permission:
+      columns:
+        - id
+        - name
+        - email
+      filter: {}
+    comment: ""
