--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,10 @@
   "description": "This project contains source code and supporting files for a serverless application that you can deploy with the SAM CLI. It includes the following files and folders.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "keywords": [],
@@ -13,12 +16,14 @@
   "type": "commonjs",
   "dependencies": {
     "@temporalio/client": "^1.14.1",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
     "form-data": "^4.0.5",
     "formidable": "^3.5.4",
     "graphql": "^16.12.0",
     "graphql-request": "^7.4.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "mailgun.js": "^12.6.1",
     "pdf-parse": "^2.4.5",
@@ -28,8 +33,21 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^6.1.1",
     "@graphql-codegen/typescript-graphql-request": "^6.4.0",
+    "@types/aws-lambda": "^8.10.160",
     "@types/busboy": "^1.5.4",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/pg": "^8.16.0"
+    "@types/node": "^25.1.0",
+    "@types/pg": "^8.16.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
+  },
+  "compilerOptions": {
+    "types": [
+      "jest",
+      "node"
+    ]
   }
 }
