--- a/hasura/metadata/databases/default/tables/public_parents.yaml
+++ b/hasura/metadata/databases/default/tables/public_parents.yaml
@@ -1,6 +1,10 @@
 table:
   name: parents
   schema: public
+object_relationships:
+  - name: creator_admin
+    using:
+      foreign_key_constraint_on: created_by_admin_id
 array_relationships:
   - name: emails
     using:
@@ -16,7 +20,18 @@ array_relationships:
         table:
           name: students
           schema: public
+insert_permissions:
 select_permissions:
+  - role: parent
+    permission:
+      columns:
+        - id
+        - name
+        - email
+      filter:
+        id:
+          _eq: X-Hasura-User-Id
+    comment: ""
   - role: teacher
     permission:
       columns:
@@ -26,13 +41,15 @@ select_permissions:
         - phone
         - address
         - created_at
-      filter: {}
-    comment: ""
-  - role: parent
-    permission:
-      columns:
-        - id
-        - name
-        - email
-      filter: {}
+      filter:
+        _and:
+          - students:
+              class_section:
+                subjects:
+                  teacher_id:
+                    _eq: X-Hasura-User-Id
+          - creator_admin:
+              teachers:
+                id:
+                  _eq: X-Hasura-User-Id
     comment: ""
