--- a/hasura/metadata/databases/default/tables/public_exams.yaml
+++ b/hasura/metadata/databases/default/tables/public_exams.yaml
@@ -1,6 +1,10 @@
 table:
   name: exams
   schema: public
+object_relationships:
+  - name: creator_admin
+    using:
+      foreign_key_constraint_on: created_by_admin_id
 array_relationships:
   - name: emails
     using:
@@ -32,7 +36,7 @@ insert_permissions:
         - academic_year
     comment: ""
 select_permissions:
-  - role: teacher
+  - role: parent
     permission:
       columns:
         - id
@@ -40,7 +44,7 @@ select_permissions:
         - academic_year
       filter: {}
     comment: ""
-  - role: parent
+  - role: teacher
     permission:
       columns:
         - id
