--- a/hasura/metadata/databases/default/tables/public_messages.yaml
+++ b/hasura/metadata/databases/default/tables/public_messages.yaml
@@ -5,21 +5,28 @@ object_relationships:
   - name: chat
     using:
       foreign_key_constraint_on: chat_id
-select_permissions:
-  - role: teacher
+insert_permissions:
+  - role: parent
     permission:
+      check: {}
       columns:
-        - id
         - chat_id
         - sender_id
         - sender_type
         - content
         - is_read
-        - created_at
-        - updated_at
-      filter: {}
-      allow_aggregations: true
     comment: ""
+  - role: teacher
+    permission:
+      check: {}
+      columns:
+        - chat_id
+        - sender_id
+        - sender_type
+        - content
+        - is_read
+    comment: ""
+select_permissions:
   - role: parent
     permission:
       columns:
@@ -34,40 +41,35 @@ select_permissions:
       filter:
         chat:
           chat_participants:
-            user_id:
-              _eq: X-Hasura-User-Id
+            _and:
+              - user_id:
+                  _eq: X-Hasura-User-Id
+              - user_type:
+                  _eq: parent
       allow_aggregations: true
     comment: ""
-insert_permissions:
   - role: teacher
     permission:
-      check: {}
       columns:
+        - id
         - chat_id
         - sender_id
         - sender_type
         - content
         - is_read
-    comment: ""
-  - role: parent
-    permission:
-      check: {}
-      columns:
-        - chat_id
-        - sender_id
-        - sender_type
-        - content
-        - is_read
+        - created_at
+        - updated_at
+      filter:
+        chat:
+          chat_participants:
+            _and:
+              - user_id:
+                  _eq: X-Hasura-User-Id
+              - user_type:
+                  _eq: teacher
+      allow_aggregations: true
     comment: ""
 update_permissions:
-  - role: teacher
-    permission:
-      columns:
-        - content
-        - is_read
-      filter: {}
-      check: {}
-    comment: ""
   - role: parent
     permission:
       columns:
@@ -77,5 +79,13 @@ update_permissions:
           chat_participants:
             user_id:
               _eq: X-Hasura-User-Id
+      check: {}
+    comment: ""
+  - role: teacher
+    permission:
+      columns:
+        - content
+        - is_read
+      filter: {}
       check: {}
     comment: ""
