--- a/hasura/metadata/databases/default/tables/public_students.yaml
+++ b/hasura/metadata/databases/default/tables/public_students.yaml
@@ -2,9 +2,15 @@ table:
   name: students
   schema: public
 object_relationships:
+  - name: admin
+    using:
+      foreign_key_constraint_on: admin_id
   - name: class_section
     using:
       foreign_key_constraint_on: class_section_id
+  - name: creator_admin
+    using:
+      foreign_key_constraint_on: created_by_admin_id
   - name: parent
     using:
       foreign_key_constraint_on: parent_id
@@ -30,19 +36,8 @@ array_relationships:
         table:
           name: progress_cards
           schema: public
+insert_permissions:
 select_permissions:
-  - role: teacher
-    permission:
-      columns:
-        - id
-        - admission_no
-        - name
-        - class_section_id
-        - parent_id
-        - is_active
-        - created_at
-      filter: {}
-    comment: ""
   - role: parent
     permission:
       columns:
@@ -55,3 +50,24 @@ select_permissions:
       filter:
         parent_id:
           _eq: X-Hasura-User-Id
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - admission_no
+        - name
+        - class_section_id
+        - parent_id
+        - is_active
+        - created_at
+      filter:
+        _and:
+          - class_section:
+              subjects:
+                teacher_id:
+                  _eq: X-Hasura-User-Id
+          - creator_admin:
+              teachers:
+                id:
+                  _eq: X-Hasura-User-Id
+    comment: ""
