--- a/hasura/metadata/databases/default/tables/public_teachers.yaml
+++ b/hasura/metadata/databases/default/tables/public_teachers.yaml
@@ -1,6 +1,10 @@
 table:
   name: teachers
   schema: public
+object_relationships:
+  - name: creator_admin
+    using:
+      foreign_key_constraint_on: created_by_admin_id
 array_relationships:
   - name: bulk_uploads
     using:
@@ -30,7 +34,21 @@ array_relationships:
         table:
           name: subjects
           schema: public
+insert_permissions:
 select_permissions:
+  - role: parent
+    permission:
+      columns:
+        - id
+        - name
+        - email
+      filter:
+        subjects:
+          class_sections:
+            students:
+              parent_id:
+                _eq: X-Hasura-User-Id
+    comment: ""
   - role: teacher
     permission:
       columns:
@@ -41,13 +59,7 @@ select_permissions:
         - qualification
         - is_active
         - created_at
-      filter: {}
-    comment: ""
-  - role: parent
-    permission:
-      columns:
-        - id
-        - name
-        - email
-      filter: {}
+      filter:
+        id:
+          _eq: X-Hasura-User-Id
     comment: ""
