--- a/hasura/metadata/databases/default/tables/public_admins.yaml
+++ b/hasura/metadata/databases/default/tables/public_admins.yaml
@@ -58,3 +58,11 @@ array_relationships:
         table:
           name: uploads
           schema: public
+select_permissions:
+  - role: anonymous
+    permission:
+      columns:
+        - id
+      filter: {}
+      allow_aggregations: true
+    comment: "Allow counts on landing page"
