--- a/hasura/metadata/databases/default/tables/public_teachers.yaml
+++ b/hasura/metadata/databases/default/tables/public_teachers.yaml
@@ -63,3 +63,10 @@ select_permissions:
         id:
           _eq: X-Hasura-User-Id
     comment: ""
+  - role: anonymous
+    permission:
+      columns:
+        - id
+      filter: {}
+      allow_aggregations: true
+    comment: "Allow counts on landing page"
