--- a/hasura/metadata/databases/default/tables/public_class_sections.yaml
+++ b/hasura/metadata/databases/default/tables/public_class_sections.yaml
@@ -22,8 +22,14 @@ array_relationships:
         remote_table:
           name: subjects
           schema: public
-
 select_permissions:
+  - role: anonymous
+    permission:
+      columns:
+        - id
+      filter: {}
+      allow_aggregations: true
+    comment: Allow counts on landing page
   - role: parent
     permission:
       columns:
@@ -53,10 +59,3 @@ select_permissions:
                 id:
                   _eq: X-Hasura-User-Id
     comment: ""
-  - role: anonymous
-    permission:
-      columns:
-        - id
-      filter: {}
-      allow_aggregations: true
-    comment: "Allow counts on landing page"
