--- a/hasura/metadata/databases/default/tables/public_messages.yaml
+++ b/hasura/metadata/databases/default/tables/public_messages.yaml
@@ -15,6 +15,7 @@ insert_permissions:
         - sender_type
         - content
         - is_read
+        - sender_name
     comment: ""
   - role: teacher
     permission:
@@ -25,6 +26,7 @@ insert_permissions:
         - sender_type
         - content
         - is_read
+        - sender_name
     comment: ""
 select_permissions:
   - role: parent
@@ -36,6 +38,7 @@ select_permissions:
         - sender_type
         - content
         - is_read
+        - sender_name
         - created_at
         - updated_at
       filter:
@@ -57,6 +60,7 @@ select_permissions:
         - sender_type
         - content
         - is_read
+        - sender_name
         - created_at
         - updated_at
       filter:
@@ -74,6 +78,7 @@ update_permissions:
     permission:
       columns:
         - is_read
+        - sender_name
       filter:
         chat:
           chat_participants:
@@ -86,6 +91,7 @@ update_permissions:
       columns:
         - content
         - is_read
+        - sender_name
       filter: {}
       check: {}
     comment: ""
