--- a/hasura/metadata/databases/default/tables/public_teachers.yaml
+++ b/hasura/metadata/databases/default/tables/public_teachers.yaml
@@ -34,8 +34,14 @@ array_relationships:
         table:
           name: subjects
           schema: public
-insert_permissions:
 select_permissions:
+  - role: anonymous
+    permission:
+      columns:
+        - id
+      filter: {}
+      allow_aggregations: true
+    comment: Allow counts on landing page
   - role: parent
     permission:
       columns:
@@ -63,10 +69,3 @@ select_permissions:
         id:
           _eq: X-Hasura-User-Id
     comment: ""
-  - role: anonymous
-    permission:
-      columns:
-        - id
-      filter: {}
-      allow_aggregations: true
-    comment: "Allow counts on landing page"
